--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,23 +14,22 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Culto<span class="sr-only"></span></a></li>
-        <li><a href="#">Administrador</a></li>
+        <li><a href="{% url 'Biblia' %}">Biblia</a></li>
+        <li class=""><a href="#">Cronograma<span class="sr-only"></span></a></li>
+        <li><a href="/Administrador/">Administrador</a></li>
+        <!--<li><a href="{% url 'Hermanos' %}">Hermanos</a></li>-->
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Cronograma <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Culto <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Actividades Especiales</a></li>
-            <li><a href="#">Cultos</a></li>
-            <li><a href="#">...</a></li>
+            <li><a href="#">Espectador</a></li>
+            <li><a href="#">Direccion</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">...</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">...</a></li>
+            <li><a href="#">Administrador y Gestios de cultos</a></li>
           </ul>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/biblia">Biblia</a></li>
+        <li><a href="#">Usuari..pendiente</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
