--- a/biblia/templates/BuscarVersiculo.html
+++ b/biblia/templates/BuscarVersiculo.html
@@ -53,7 +53,7 @@ Buscar Versiculo
       </div>
       <div class="btn btn-info btn-lg btn-block col-xs-12" id="filtrar" >Filtrar</div>
     </div>
-    <div class="col-s-12" id="contenedor">
+    <div class="col-sm-12 col-xs-12" id="contenedor">
       <ul class="list-group" id="contenido">
         {% for x in genesis %}
           <li class="list-group-item">
