--- a/culto/templates/Cronograma.html
+++ b/culto/templates/Cronograma.html
@@ -59,6 +59,7 @@ Cronograma
   </div>
 {% include "modal_crear_evento.html" %}
 {% include "modal_crear_culto.html" %}
+{% include "modal_modificar_culto.html" %}
 
 {% endblock %}
 {% block js %}
