--- a/culto/templates/modal_modificar_culto.html
+++ b/culto/templates/modal_modificar_culto.html
@@ -18,6 +18,7 @@
               <label class="col-sm-4 col-xs-12">Direccion</label>
               <div class="col-sm-8 col-xs-12">
                 <select required style="width:100%" class="form-control" name="Modificar_Direccion" id="Modificar_Direccion">
+                  <option value=""></option>
                   {% for x in hermanos %}
                     <option value="{{x.id}}">{{x.nombre}} {{x.apellido}}</option>
                   {% endfor %}
@@ -28,6 +29,7 @@
               <label class="col-sm-4 col-xs-12">Lectura</label>
               <div class="col-sm-8 col-xs-12">
                 <select required style="width:100%" class="form-control" name="Modificar_Lectura" id="Modificar_Lectura">
+                  <option value=""></option>
                   {% for x in hermanos %}
                     <option value="{{x.id}}">{{x.nombre}} {{x.apellido}}</option>
                   {% endfor %}
@@ -38,6 +40,7 @@
               <label class="col-sm-4 col-xs-12">Recolecion</label>
               <div class="col-sm-8 col-xs-12">
                 <select required style="width:100%" class="form-control" name="Modificar_Recolecion" id="Modificar_Recolecion">
+                  <option value=""></option>
                   {% for x in hermanos %}
                     <option value="{{x.id}}">{{x.nombre}} {{x.apellido}}</option>
                   {% endfor %}
@@ -48,6 +51,7 @@
               <label class="col-sm-4 col-xs-12">Oracion</label>
               <div class="col-sm-8 col-xs-12">
                 <select required style="width:100%" class="form-control" name="Modificar_Oracion" id="Modificar_Oracion">
+                  <option value=""></option>
                   {% for x in hermanos %}
                     <option value="{{x.id}}">{{x.nombre}} {{x.apellido}}</option>
                   {% endfor %}
@@ -58,6 +62,7 @@
               <label class="col-sm-4 col-xs-12">Coros</label>
               <div class="col-sm-8 col-xs-12">
                 <select required style="width:100%" class="form-control" name="Modificar_Coros" id="Modificar_Coros">
+                  <option value=""></option>
                   {% for x in hermanos %}
                     <option value="{{x.id}}">{{x.nombre}} {{x.apellido}}</option>
                   {% endfor %}
@@ -68,6 +73,7 @@
               <label class="col-sm-4 col-xs-12">Predicacion</label>
               <div class="col-sm-8 col-xs-12">
                 <select required style="width:100%" class="form-control" name="Modificar_Predicacion" id="Modificar_Predicacion">
+                  <option value=""></option>
                   {% for x in hermanos %}
                     <option value="{{x.id}}">{{x.nombre}} {{x.apellido}}</option>
                   {% endfor %}
@@ -78,6 +84,7 @@
               <label class="col-sm-4 col-xs-12">Tipos De Cultos</label>
               <div class="col-sm-8 col-xs-12">
                 <select required style="width:100%" class="form-control" name="Modificar_tipos_de_cultos" id="Modificar_tipos_de_cultos">
+                  <option value=""></option>
                   {% for x in tipos_de_cultos %}
                     <option value="{{x.id}}">{{x.nombre}}</option>
                   {% endfor %}
