--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,7 +20,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Culto <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Espectador</a></li>
+            <li><a href="{% url 'Espectador' %}">Espectador</a></li>
             <li><a href="{% url 'Direccion' %}">Direccion</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="{% url 'Culto' %}">Gestios de cultos y eventos</a></li>
