--- a/culto/templates/DirigirCulto.html
+++ b/culto/templates/DirigirCulto.html
@@ -4,6 +4,7 @@ Dirigir
 {% endblock %}
 {% load staticfiles %}
 {% block content %}
+<input type="hidden" id="id_culto" value="{{pk}}">
 <div class="row">
   
   <div class="col-sm-12 col-md-8 col-xs-12">
@@ -64,7 +65,7 @@ Dirigir
               </div>
             </div>
           </div>
-          <div class="btn btn-info btn-lg btn-block col-xs-12" id="filtrar" >Filtrar</div>
+          <div class="btn btn-info btn-lg btn-block col-xs-12" id="filtrar" >Mostrar</div>
         </div>
         <div class="col-sm-12 col-xs-12 col-md-6" id="contenedor">
           <ul class="list-group" id="contenido">
