--- a/culto/templates/DirigirCulto.html
+++ b/culto/templates/DirigirCulto.html
@@ -5,22 +5,21 @@ Dirigir
 {% load staticfiles %}
 {% block content %}
 <input type="hidden" id="id_culto" value="{{pk}}">
-<div class="row">
-  
-  <div class="col-sm-12 col-md-8 col-xs-12">
+<div class="col-sm-12 col-md-8 col-xs-12">
 
-    <!-- Nav tabs -->
-    <ul class="nav nav-tabs" role="tablist">
-      <li role="presentation" class="active"><a href="#Texto" aria-controls="Texto" role="tab" data-toggle="tab">Texto Biblico</a></li>
-      <li role="presentation"><a href="#Invitar" aria-controls="Invitar" role="tab" data-toggle="tab">Invitar</a></li>
-      <li role="presentation"><a href="#Coros" aria-controls="Coros" role="tab" data-toggle="tab">Coros</a></li>
-      <li role="presentation"><a href="#Anuncios" aria-controls="Anuncios" role="tab" data-toggle="tab">Anuncios</a></li>
-    </ul>
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#Texto" aria-controls="Texto" role="tab" data-toggle="tab">Texto Biblico</a></li>
+    <li role="presentation"><a href="#Invitar" aria-controls="Invitar" role="tab" data-toggle="tab">Invitar</a></li>
+    <li role="presentation"><a href="#Coros" aria-controls="Coros" role="tab" data-toggle="tab">Coros</a></li>
+    <li role="presentation"><a href="#Anuncios" aria-controls="Anuncios" role="tab" data-toggle="tab">Anuncios</a></li>
+  </ul>
 
-    <!-- Tab panes -->
-    <div class="tab-content">
-      <div role="tabpanel" class="tab-pane fade in active" id="Texto">
-        <div class="col-xs-12 col-md-6">
+  <!-- Tab panes -->
+  <div class="tab-content">
+    <div role="tabpanel" class="tab-pane fade in active" id="Texto" >
+      <div style="margin-top:20px;">
+        <div class="col-xs-12 col-md-6" id="div_1">
           <div class="col-xs-12 col-sm-6 col-md-12 ">
             <div class="form-group col-xs-6 col-md-12">
               <label class="col-sm-4 col-xs-12">Libro</label>
@@ -43,7 +42,7 @@ Dirigir
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-12">
+          <div class="col-xs-12 col-sm-6 col-md-12" id="">
             <div class="form-group col-xs-6 col-md-12">
               <label class="col-sm-4 col-xs-12">Desde</label>
               <div class="col-sm-8 col-xs-12 col-md-12">
@@ -67,7 +66,7 @@ Dirigir
           </div>
           <div class="btn btn-info btn-lg btn-block col-xs-12" id="filtrar" >Mostrar</div>
         </div>
-        <div class="col-sm-12 col-xs-12 col-md-6" id="contenedor">
+        <div class="col-sm-12 col-xs-12 col-md-6" id="contenedor" style="overflow:auto;">
           <ul class="list-group" id="contenido">
             {% for x in genesis %}
               <li class="list-group-item">
@@ -78,15 +77,18 @@ Dirigir
           </ul>
         </div>
       </div>
-      <div role="tabpanel" class="tab-pane fade" id="Invitar">...</div>
-      <div role="tabpanel" class="tab-pane fade" id="Coros">Proximamente</div>
-      <div role="tabpanel" class="tab-pane fade" id="Anuncios">...</div>
     </div>
-
+    <div role="tabpanel" class="tab-pane fade" id="Invitar">...</div>
+    <div role="tabpanel" class="tab-pane fade" id="Coros">Proximamente</div>
+    <div role="tabpanel" class="tab-pane fade" id="Anuncios">...</div>
   </div>
+
 </div>
+{% include 'chat.html' %}
+
 
 {% endblock %}
 {% block js %}
   <script type="text/javascript" src="{% static 'js/Dirigir.js' %}"></script>
+  <script type="text/javascript" src="{% static 'js/chat.js' %}"></script>
 {% endblock %}
