--- a/culto/templates/EspectarCulto.html
+++ b/culto/templates/EspectarCulto.html
@@ -5,8 +5,9 @@ Espectar
 {% load staticfiles %}
 {% block content %}
 <input type="hidden" id="id_culto" value="{{pk}}">
+<div id="title"></div>
 <div id="contenedor">
-  
+	  
 </div>
 
 {% endblock %}
