--- a/culto/templates/DirigirCulto.html
+++ b/culto/templates/DirigirCulto.html
@@ -82,12 +82,12 @@ Dirigir
       </div>
     </div>
     <div role="tabpanel" class="tab-pane fade" id="Invitar">
-      <h4>Direccion: {{cultos.0.Direccion.nombre}} {{cultos.0.Direccion.apellido}} <div class="pull-right"><input type="checkbox">Invitar </div></h4>
-      <h4>Lectura: {{cultos.0.lectura.nombre}} {{cultos.0.lectura.apellido}} <div class="pull-right"><input type="checkbox">Invitar </div></h4>
-      <h4>Recolecion: {{cultos.0.recolecion.nombre}} {{cultos.0.recolecion.apellido}} <div class="pull-right"><input type="checkbox">Invitar </div></h4>
-      <h4>Oracion: {{cultos.0.oracion.nombre}} {{cultos.0.oracion.apellido}} <div class="pull-right"><input type="checkbox">Invitar </div></h4>
-      <h4>Coros: {{cultos.0.coros.nombre}} {{cultos.0.coros.apellido}} <div class="pull-right"><input type="checkbox">Invitar </div></h4>
-      <h4>Predicacion: {{cultos.0.predicacion.nombre}} {{cultos.0.predicacion.apellido}} <div class="pull-right"><input type="checkbox">Invitar </div></h4>
+      <h4>Direccion: {{cultos.0.Direccion.nombre}} {{cultos.0.Direccion.apellido}} <div class="pull-right"><input type="checkbox"> Invitar </div></h4>
+      <h4>Lectura: {{cultos.0.lectura.nombre}} {{cultos.0.lectura.apellido}} <div class="pull-right"><input type="checkbox"> Invitar </div></h4>
+      <h4>Recolecion: {{cultos.0.recolecion.nombre}} {{cultos.0.recolecion.apellido}} <div class="pull-right"><input type="checkbox"> Invitar </div></h4>
+      <h4>Oracion: {{cultos.0.oracion.nombre}} {{cultos.0.oracion.apellido}} <div class="pull-right"><input type="checkbox"> Invitar </div></h4>
+      <h4>Coros: {{cultos.0.coros.nombre}} {{cultos.0.coros.apellido}} <div class="pull-right"><input type="checkbox"> Invitar </div></h4>
+      <h4>Predicacion: {{cultos.0.predicacion.nombre}} {{cultos.0.predicacion.apellido}} <div class="pull-right"><input type="checkbox"> Invitar </div></h4>
       <br>
       <br>
       <h4>Invitado Especial</h4>
@@ -135,7 +135,7 @@ Dirigir
                       <h4 class="pull-right">Direccion:</h4>
                     </div>
                     <div class="col-sm-10">
-                      <h4>{{x.Direccion.nombre}} {{x.Direccion.apellido}} <div class="pull-right"><input type="checkbox">Mostrar</div></h4>
+                      <h4>{{x.Direccion.nombre}} {{x.Direccion.apellido}} <div class="pull-right"><input type="checkbox"> Mostrar</div></h4>
                     </div>
                   </div>
                   <div class="col-sm-12">
@@ -143,7 +143,7 @@ Dirigir
                       <h4 class="pull-right">Lectura:</h4>
                     </div>
                     <div class="col-sm-10">
-                      <h4>{{x.lectura.nombre}} {{x.lectura.apellido}} <div class="pull-right"><input type="checkbox">Mostrar</div></h4>
+                      <h4>{{x.lectura.nombre}} {{x.lectura.apellido}} <div class="pull-right"><input type="checkbox"> Mostrar</div></h4>
                     </div>
                   </div>
                   <div class="col-sm-12">
@@ -151,7 +151,7 @@ Dirigir
                       <h4 class="pull-right">Recolecion:</h4>
                     </div>
                     <div class="col-sm-10">
-                      <h4>{{x.recolecion.nombre}} {{x.recolecion.apellido}} <div class="pull-right"><input type="checkbox">Mostrar</div></h4>
+                      <h4>{{x.recolecion.nombre}} {{x.recolecion.apellido}} <div class="pull-right"><input type="checkbox"> Mostrar</div></h4>
                     </div>
                   </div>
                   <div class="col-sm-12">
@@ -159,7 +159,7 @@ Dirigir
                       <h4 class="pull-right">Oracion:</h4>
                     </div>
                     <div class="col-sm-10">
-                      <h4>{{x.oracion.nombre}} {{x.oracion.apellido}} <div class="pull-right"><input type="checkbox">Mostrar</div></h4>
+                      <h4>{{x.oracion.nombre}} {{x.oracion.apellido}} <div class="pull-right"><input type="checkbox"> Mostrar</div></h4>
                     </div>
                   </div>
                   <div class="col-sm-12">
@@ -167,7 +167,7 @@ Dirigir
                       <h4 class="pull-right">Coros:</h4>
                     </div>
                     <div class="col-sm-10">
-                      <h4>{{x.coros.nombre}} {{x.coros.apellido}} <div class="pull-right"><input type="checkbox">Mostrar</div></h4>
+                      <h4>{{x.coros.nombre}} {{x.coros.apellido}} <div class="pull-right"><input type="checkbox"> Mostrar</div></h4>
                     </div>
                   </div>
                   <div class="col-sm-12">
@@ -175,7 +175,46 @@ Dirigir
                       <h4 class="pull-right">Predicacion:</h4>
                     </div>
                     <div class="col-sm-10">
-                      <h4>{{x.predicacion.nombre}} {{x.predicacion.apellido}} <div class="pull-right"><input type="checkbox">Mostrar</div></h4>
+                      <h4>{{x.predicacion.nombre}} {{x.predicacion.apellido}} <div class="pull-right"><input type="checkbox"> Mostrar</div></h4>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+          {% for x in eventos_proximos %}
+            <div class="panel panel-default">
+              <div class="panel-heading" role="tab" id="headingProximo_evento_{{x.id}}">
+                <h4 class="panel-title">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseProximo_evento_{{x.id}}" aria-expanded="false" aria-controls="collapseProximo_evento_{{x.id}}">
+                  Evento: {{x.nombre}}
+                  </a>
+                </h4>
+              </div>
+              <div id="collapseProximo_evento_{{x.id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingProximo_evento_{{x.id}}">
+                <div class="panel-body">
+                  <div class="col-sm-12">
+                    <div class="col-sm-2" >
+                      <h4 class="pull-right">Encargado:</h4>
+                    </div>
+                    <div class="col-sm-10">
+                      <h4>{{x.encargado.nombre}} {{x.encargado.apellido}} </h4>
+                    </div>
+                  </div>
+                  <div class="col-sm-12">
+                    <div class="col-sm-2" >
+                      <h4 class="pull-right">Fecha:</h4>
+                    </div>
+                    <div class="col-sm-10">
+                      <h4>{{x.fecha}} A las {{x.hora}} </h4>
+                    </div>
+                  </div>
+                  <div class="col-sm-12">
+                    <div class="col-sm-2" >
+                      <h4 class="pull-right">Descripcion:</h4>
+                    </div>
+                    <div class="col-sm-10">
+                      <p >{{x.descripcion}}</p>
                     </div>
                   </div>
                 </div>
