--- a/culto/templates/modal_crear_culto.html
+++ b/culto/templates/modal_crear_culto.html
@@ -14,6 +14,28 @@
               </div>
             </div>
             <div class="form-group col-xs-12">
+              <label class="col-sm-4 col-xs-12">Escuela Dominical</label>
+              <div class="col-sm-8 col-xs-12">
+                <select required style="width:100%" class="form-control" name="Escuela_dominical" id="Escuela_dominical">
+                  <option value=""></option>
+                  {% for x in hermanos %}
+                    <option value="{{x.id}}">{{x.nombre}} {{x.apellido}}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+            <div class="form-group col-xs-12">
+              <label class="col-sm-4 col-xs-12">Escuela De niños</label>
+              <div class="col-sm-8 col-xs-12">
+                <select required style="width:100%" class="form-control" name="Escuela_De_ninos" id="Escuela_De_ninos">
+                  <option value=""></option>
+                  {% for x in hermanos %}
+                    <option value="{{x.id}}">{{x.nombre}} {{x.apellido}}</option>
+                  {% endfor %}
+                </select>
+              </div>
+            </div>
+            <div class="form-group col-xs-12">
               <label class="col-sm-4 col-xs-12">Direccion</label>
               <div class="col-sm-8 col-xs-12">
                 <select required style="width:100%" class="form-control" name="Direccion" id="Direccion">
